--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -2,6 +2,7 @@
 
 - [Diapositivas](http://jamj2000.github.io/entornosdesarrollo/3/diapositivas)
 - [Actividades](http://jamj2000.github.io/entornosdesarrollo/3/actividades)
+_Disco duro de roer_
 
 <!---
 Ejemplos
@@ -29,7 +30,7 @@ En esta Unidad aprenderemos a:
 - Efectuar pruebas de integración, de sistema y de aceptación.
 - Realizar medidas de calidad sobre el software desarrollado.
 
-_índice: introducción, pruebas, Pruebas unitarias: pruebas de la unidad. Pruebas de integración: varias clases que por si solas funcionan bien,y al integrar todas hay errores. Pruebas de sistema: una vez implantado en el S.O. rendimiento, tolerancia a fallos... Prueba de aceptación: el cliente debe dar el visto bueno. Medidas de calidad: que cumpla los requisitos del cliente, que sea eficiente, interfaz amigable, facilidad de uso y facilidad de mantenimiento (diseño ordenado, que falicite los cambios que haya que hacer...), tolerancia a fallos, multiplataforma_
+_índice: introducción, pruebas, Pruebas unitarias: pruebas de la unidad(ej:clase empleado) de clase o método. Pruebas de integración: varias clases que por si solas funcionan bien,y al integrar todas hay errores. Pruebas de sistema: una vez implantado en el S.O. rendimiento, tolerancia a fallos... Prueba de aceptación: el cliente debe dar el visto bueno. Medidas de calidad: que cumpla los requisitos del cliente, que sea eficiente, interfaz amigable, facilidad de uso y facilidad de mantenimiento (diseño ordenado, que falicite los cambios que haya que hacer...), tolerancia a fallos, multiplataforma_
 _pwa aplicaciones progresivas_
 
 ### Objetivos de las pruebas
@@ -41,7 +42,7 @@ _pwa aplicaciones progresivas_
 
 - Existen distintos **frameworks** para la realización de pruebas.
 
-_Es bueno que las pruebas no las haga el mismo programador, ya que conoce el código... Objetivos: hace lo que te pide el cliente, y no haga errores porque hace cosas que no debe hacer_
+_Es bueno que las pruebas no las haga el mismo programador, ya que conoce el código... Objetivos: hace lo que te pide el cliente, y no haga errores porque hace cosas que no debe hacer. Objetivo: buscar fallos. Nosotros usamos en Java: JUnit. frameworks es un tipo especial de biblioteca, te obliga a tener un flujo de trabajo específico(tiene reglas).En eclipse: testnt_
 
 ### Framework
 
@@ -67,7 +68,7 @@ Requieren la ejecución de la aplicación. Permiten medir el comportamiento de l
 - __Pruebas estáticas:__
 Se realizan sin ejecutar el código de la aplicación. Se examina el código fuente.
 
-_PD: probamos la aplicación ejecutándola, medimos el comportamiento de la aplicación. PE: Se examina el código sin ejecutar la aplicación. Analizadores de código (por ejemplo te dice que una variable no se está usando, o código inalcanzable)_
+_CAE. Pruebas dinámicas: probamos la aplicación ejecutándola, medimos el comportamiento de la aplicación. Pruebas estáticas: Se examina el código sin ejecutar la aplicación. Analizadores de código (por ejemplo te dice que una variable no se está usando, o código inalcanzable)_
 
 ### Estrategias de prueba
 
@@ -77,7 +78,7 @@ Se estudia el sistema desde fuera. Son pruebas funcionales.
 - __Caja blanca:__
 Se examina el código fuente y su ejecución. Son pruebas estructurales.
 
-_Forma en la que se aborda la prueba. Caja blanca también se llama caja transparente, si hay sentencias que no se ejecutan, si todos los casos de prueba son válidos..._
+_CAE. Forma en la que se aborda la prueba. Caja blanca también se llama caja transparente, si hay sentencias que no se ejecutan, si todos los casos de prueba son válidos...CB asociada normalmente a métodos estáticos._
 
 ### Estrategias de prueba
 
@@ -94,7 +95,9 @@ _Forma en la que se aborda la prueba. Caja blanca también se llama caja transpa
   - Particiones de equivalencia
   - Valores límite
 
-_Se trabaja sobre la interfaz (no gráfica) el cascarón, la parte externa. Se ponen unos valores de entrada y se ve si los valoores de salida son los correctos. si quisieramos analizar una aplicaicón que lo que hace es multiplicar dos números: Particiones de equivalencia coger el números y dividir en partes: probar multiplicar varias parejas de números positivos, y varias parejas de números negativos, y varias de 1 número posi y otro neg. y valores límites: se emplea con números muy raros que están en los límites (cero, máx número positivo (en byte probar 126,127,128))_
+_Se trabaja sobre la interfaz (no gráfica, la interfaz de programación) el cascarón, la parte externa. Se ponen unos valores de entrada y se ve si los valores de salida son los correctos. Si quisieramos analizar una aplicaicón que lo que hace es multiplicar dos números: 
+[Particiones de equivalencia]: ciertos tipos de datos, para un método para comprobar una división: coger el números y dividir en partes: probar multiplicar varias parejas de números positivos, y varias parejas de números negativos, y varias de 1 número positivo y otro negativo, Se agrupan en particiones para hacer las pruebas.
+[Valores límites]: se emplea con números muy raros que están en los límites mínimos y máximos (cero, máx número positivo (en byte probar 126,127,128))_
 
 ### Estrategias de prueba de caja blanca
 
@@ -106,7 +109,7 @@ _Se trabaja sobre la interfaz (no gráfica) el cascarón, la parte externa. Se p
   - Cobertura lógica
   - Prueba de bucles
 
-_Técnicas: cobertura de código, comprueba que por ejemplo no se ha dejado ningún if sin pasar, que no deja ningún grupo sin probar. Prueba de bubles (bubles infinitos, que no se ejecutan...
+_Técnicas: cobertura de código, comprueba que por ejemplo no se ha dejado ningún if sin pasar, que no deja ningún grupo sin probar. Prueba de bucles (bucles infinitos, que no se ejecutan)... Ver cómo funciona por dentro_
 
 ### Tipos de pruebas
 
@@ -116,6 +119,7 @@ Evaluan el cumplimiento de los requisitos.
 - __No funcionales:__
 Evaluan aspectos adicionales como rendimiento, seguridad, ... 
 
+ _Funcionales: Lo  que nos piden. No funcionales: todo lo demás, si te piden determinados aspectos de seguridad, entonces entrarían en funcionales_
 
 ### Pruebas funcionales
 
@@ -127,6 +131,13 @@ Evaluan aspectos adicionales como rendimiento, seguridad, ...
 - Pruebas alfa y beta
 - Pruebas de aceptación (validación por parte del cliente)
 
+_Pruebas de regresión: efectos colaterales de solucionar un error (son errores de regresión) que aparece otro error que antes no existía. Se hacen las pruebas que ya pasaron antes para que lo que funcionaba entes, siga funcionando(unitarias anteriores)_
+_Prueba de integración, se prueba la clase main, que es donde se integran las distintas clases._
+_Pruebas de sistema: Pruebas de rendimientos, de eficiencia (recursos)
+_Pruebas de humo: comprobar el entorno: para una determinada aplicación necesitamos requisitos críticos ( son cosas externas a la aplicación), para que cuando traslademos la aplicación al cliente. Aunque la aplicaicón esté bien, si cuando llegas a enseñarsela al cliente si el equipo no tiene el SO necesario, la variable path.... no funcionará_
+_Pruebas alfa: se hacen en la empresa desarrolladora. Pruebas beta: software aun no es definitivo, las prueba el cliente normalmente (RC: versión justo anterior a la liberación)_
+_Pruebas de aceptación: normalmente no hay problemas a estás alturas. Validación por parte del cliente_
+
 
 ### Pruebas no funcionales
 
@@ -137,6 +148,8 @@ Evaluan aspectos adicionales como rendimiento, seguridad, ...
 - Pruebas de compatibilidad
 - Pruebas de portabilidad
 - ...
+
+_Usabilidad. Rendimiento (rápidez) y eficiencia (aunque realmente esto sería distinto al rendimiento.Stress. Seguridad. Compatibilidad compatible con otros recursos (bibliotecas, otras aplicaciones...). Portabilidad (referente al SO)_
 
 
 ### Mecanismos de prueba
@@ -171,6 +184,9 @@ https://en.wikipedia.org/wiki/XUnit
 
 https://en.wikipedia.org/wiki/List_of_unit_testing_frameworks
 
+_Cae en el examen. Hay muchos con formato xUnit(JUnit, PHPUnit) basado en Samalltalk's -> SUnit_
+_C++ es lenguaje profesional, multiparadigma, no orientado a objetos. Java que es orientado a objetos tiene algunas cosas no orientadas a objetos(int, etc)_
+_Problema: frameworks puede fallar en el código, y que haga falta hacer pruebas del código de pruebas_
 
 ### Caso de prueba
 
