--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -159,12 +159,17 @@ _Usabilidad. Rendimiento (rápidez) y eficiencia (aunque realmente esto sería d
 - Automático
   - Mediante software que ejecuta código de forma automatizada y compara los resultados obtenidos y los resultados esperados.
 
+_Manual: Ir al main, hacer la suma y ver los resultados. Automáticas: ir al framework de prueba incorporar casos de prueba y los podemos pasar las veces que queramos._
+
+
 
 ### Soporte del depurador
 
 - Puntos de ruptura
 - Ejecución paso a paso
 - Análisis de variables
+
+_Un programa integrado en el IDE que nos permite ejecutar el programa paso a paso.Análisis de variables: valores que van tomando las variables en cada momento. Hay programadores que en vez de esto usan println_
 
 
 ### Automatización de pruebas
@@ -173,6 +178,8 @@ _Usabilidad. Rendimiento (rápidez) y eficiencia (aunque realmente esto sería d
 - Aserciones
 
 https://en.wikipedia.org/wiki/XUnit
+
+_Asersiones: afirmaciones: fail(): para que el método falle a conciencia.
 
 
 ### Frameworks para pruebas
@@ -195,6 +202,8 @@ _Problema: frameworks puede fallar en el código, y que haga falta hacer pruebas
 
 http://www.jtech.ua.es/j2ee/publico/lja-2012-13/sesion04-apuntes.html
 
+_Valor(es) de entrada que ser asocia a una valor(es) de salida_
+
 
 ### JUnit4/5 - Anotaciones
 
@@ -204,6 +213,10 @@ http://www.jtech.ua.es/j2ee/publico/lja-2012-13/sesion04-apuntes.html
 - @After / @AfterEach
 - @AfterClass / @AfterAll
 - @Ignore
+
+_Etiquetas importantes JUnit4: Método de prueba:@test. @Ignore. @BeforeClass antes de todas las clases. @Before antes de cada test. En teoría solo un método @before y otro @after como máximo. @Test habrá muchos
+
+importar: unit.*_
 
 
 ### JUnit - Aserciones
@@ -236,7 +249,7 @@ http://junit.org/junit4/javadoc/4.12/org/junit/Assert.html
   - Escribir las pruebas primero (Test First Development).
   - Refactorización (Refactoring).
 
-
+_Desarrollo guiado por pruebas.Hacer primero las pruebas de acuerdo con los requisitos del cliente y luego el código que pase esas pruebas (empiezas haciendo los métodos vacíos, con lo que dará errores y luego vas codificando los métodos hasta que cumpla). Guiarte por el objetivo final_
 
 ## Integración
 
