--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -249,7 +249,7 @@ http://junit.org/junit4/javadoc/4.12/org/junit/Assert.html
   - Escribir las pruebas primero (Test First Development).
   - Refactorización (Refactoring).
 
-_Desarrollo guiado por pruebas.Hacer primero las pruebas de acuerdo con los requisitos del cliente y luego el código que pase esas pruebas (empiezas haciendo los métodos vacíos, con lo que dará errores y luego vas codificando los métodos hasta que cumpla). Guiarte por el objetivo final_
+_Desarrollo guiado por pruebas.Hacer primero las pruebas de acuerdo con los requisitos del cliente y luego el código que pase esas pruebas (empiezas haciendo los métodos vacíos, con lo que dará errores y luego vas codificando los métodos hasta que cumpla). Guiarte por el objetivo final. Refactorización: (ponerlo bonito) simplificar, cambiar el código para que haga lo mismo pero sea más sencillo (más legible) y más fácil de mantener_
 
 ## Integración
 
@@ -260,6 +260,12 @@ _Desarrollo guiado por pruebas.Hacer primero las pruebas de acuerdo con los requ
 - Integración Descendente
 - Integración Ascendente
 - Integración Continua (CI)
+
+_Juntar todas las clases y que funcione todo en conjunto. IBB:Hacer todas las clases por separado y luego juntar todo. En proyectos grandes ya no se hace. ID: Empezar por la clase principal e ir bajando. IA: integrar_
+
+_IC ([CI]): la que se utiliza ultimamente, ir probando la aplicación en todo momento._
+
+
 
 
 ### Servidores de integración continua
@@ -274,6 +280,7 @@ _Desarrollo guiado por pruebas.Hacer primero las pruebas de acuerdo con los requ
 
 Note: CI=Continuous Integration / CD=Continuous Delivery.
 
+_CD: entrega continua. No solo haces las pruebas. Antes haces el build_
 
 
 # Calidad
