--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -313,3 +313,8 @@ Note: QA = Quality Assurance / QC = Quality Control
 - Portabilidad
 - Reusabilidad
 - Interoperatividad
+
+
+_Test Cobertura: qué es y para qué se utiliza:_
+_por si solo pasa por todos los caminos del método de ordenar?(en el ejemplo UtilidadesTest)
+_indica el porcentaje de código que se ha ejecutado (los métodos de prueba llaman a los métodos de la aplicación, y a veces no llamas a todos los métodos. La cobertura debería ser lo más cercana a 100% posible, hay empresas que dicen que a partir del 80%_
