--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -280,7 +280,7 @@ _IC ([CI]): la que se utiliza ultimamente, ir probando la aplicación en todo mo
 
 Note: CI=Continuous Integration / CD=Continuous Delivery.
 
-_CD: entrega continua. No solo haces las pruebas. Antes haces el build_
+_CD: entrega continua. No solo haces las pruebas. Antes haces el build. hacer un fork de su pryecto y usar travisCI. Que lo construya y le pase los tests. [Jenkis y bamboo son principalmente para Java]_
 
 
 # Calidad
@@ -317,4 +317,16 @@ Note: QA = Quality Assurance / QC = Quality Control
 
 _Test Cobertura: qué es y para qué se utiliza:_
 _por si solo pasa por todos los caminos del método de ordenar?(en el ejemplo UtilidadesTest)
-_indica el porcentaje de código que se ha ejecutado (los métodos de prueba llaman a los métodos de la aplicación, y a veces no llamas a todos los métodos. La cobertura debería ser lo más cercana a 100% posible, hay empresas que dicen que a partir del 80%_
+_Indica el porcentaje de código que se ha ejecutado (los métodos de prueba llaman a los métodos de la aplicación, y a veces no llamas a todos los métodos). La cobertura debería ser lo más cercana a 100% posible, hay empresas que dicen que a partir del 80%_
+
+## Cobertura del código
+
+- Es una medida que indica el porcentaje de código que ha sido ejecutado durante las pruebas.
+- Es aconsejable que sea del 100%.
+- Si es del 100% entonces se ha ejecutado todo el código fuente durante las pruebas.
+- Si es menor del 100% entonces existe código fuente que no se ha ejecutado durante las pruebas.
+- Es posible realizar la cobertura tanto desde el IDE como desde un servicio web apropiado.
+- Un servidor web que proporciona cobertura de código es CODECOV.IO
+
+
+
