--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -283,6 +283,23 @@ Note: CI=Continuous Integration / CD=Continuous Delivery.
 _CD: entrega continua. No solo haces las pruebas. Antes haces el build. hacer un fork de su pryecto y usar travisCI. Que lo construya y le pase los tests. [Jenkis y bamboo son principalmente para Java]_
 
 
+
+
+## Cobertura del código
+
+- Es una medida que indica el porcentaje de código que ha sido ejecutado durante las pruebas.
+- Es aconsejable que sea del 100%.
+- Si es del 100% entonces se ha ejecutado todo el código fuente durante las pruebas.
+- Si es menor del 100% entonces existe código fuente que no se ha ejecutado durante las pruebas.
+- Es posible realizar la cobertura tanto desde el IDE como desde un servicio web apropiado.
+- Un servidor web que proporciona cobertura de código es CODECOV.IO
+
+_Test Cobertura: qué es y para qué se utiliza:_
+_por si solo pasa por todos los caminos del método de ordenar?(en el ejemplo UtilidadesTest)
+_Indica el porcentaje de código que se ha ejecutado (los métodos de prueba llaman a los métodos de la aplicación, y a veces no llamas a todos los métodos). La cobertura debería ser lo más cercana a 100% posible, hay empresas que dicen que a partir del 80%_
+
+
+
 # Calidad
 
 
@@ -299,6 +316,8 @@ Control de calidad = medición de la calidad de un producto
 
 Note: QA = Quality Assurance / QC = Quality Control
 
+_A veces la calidad de producto están condicionada a la calidad del proceso_
+
 
 ## Factores de calidad
 
@@ -314,19 +333,5 @@ Note: QA = Quality Assurance / QC = Quality Control
 - Reusabilidad
 - Interoperatividad
 
-
-_Test Cobertura: qué es y para qué se utiliza:_
-_por si solo pasa por todos los caminos del método de ordenar?(en el ejemplo UtilidadesTest)
-_Indica el porcentaje de código que se ha ejecutado (los métodos de prueba llaman a los métodos de la aplicación, y a veces no llamas a todos los métodos). La cobertura debería ser lo más cercana a 100% posible, hay empresas que dicen que a partir del 80%_
-
-## Cobertura del código
-
-- Es una medida que indica el porcentaje de código que ha sido ejecutado durante las pruebas.
-- Es aconsejable que sea del 100%.
-- Si es del 100% entonces se ha ejecutado todo el código fuente durante las pruebas.
-- Si es menor del 100% entonces existe código fuente que no se ha ejecutado durante las pruebas.
-- Es posible realizar la cobertura tanto desde el IDE como desde un servicio web apropiado.
-- Un servidor web que proporciona cobertura de código es CODECOV.IO
-
-
+_Grupos: 5 primeros: afectan al usuario(facilidad de uso=ergonomía).3 siguientes: punto de vista de los programadores, el usuario final no verá lo bien o mal escrito que esté.Flexibilidad facilidad de modificación de código. 3 últimos: afectan a quien instala o implanta la aplicación. Portabilidad: cambiar por ejemplo de linux a windows.Interoperi: como se relaciona ese software con otro software_
 
