--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -297,7 +297,8 @@ _CD: entrega continua. No solo haces las pruebas. Antes haces el build. hacer un
 _Test Cobertura: qué es y para qué se utiliza:_
 _por si solo pasa por todos los caminos del método de ordenar?(en el ejemplo UtilidadesTest)
 _Indica el porcentaje de código que se ha ejecutado (los métodos de prueba llaman a los métodos de la aplicación, y a veces no llamas a todos los métodos). La cobertura debería ser lo más cercana a 100% posible, hay empresas que dicen que a partir del 80%_
-
+_Ignore para que no se hagan algunos test: eb kas pruebas sale en rojo la parte de código que no se ha probado (Ignore o porque en los casos de prueba no se han pasado suficientes que ejecuten todas las condiciones: según lo exaustivo que se quiera ser (80%-100%))_
+_En la clase main es donde está la lógica de toda la app, si las supera se considera que la integración es correcta (Servidores de integración continua (SI), nosotros usaremos Travis (alemán) buena relación un GitHub: podemos hacer integración continua desde Github directamente. Según el lenguaje te instalan una máquina virtual, y examina el código. Construye el proyecto y le pasa los test: aviso verde si la pasa: da una insignia (backyet))_
 
 
 # Calidad
