--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -336,3 +336,6 @@ _A veces la calidad de producto están condicionada a la calidad del proceso_
 
 _Grupos: 5 primeros: afectan al usuario(facilidad de uso=ergonomía).3 siguientes: punto de vista de los programadores, el usuario final no verá lo bien o mal escrito que esté.Flexibilidad facilidad de modificación de código. 3 últimos: afectan a quien instala o implanta la aplicación. Portabilidad: cambiar por ejemplo de linux a windows.Interoperi: como se relaciona ese software con otro software_
 
+_Compilación cruzada: se puede desarrollar en Ubuntu para Winsows por ejemplo_
+_Código en Githug, push se lanzan las tareas... Baget verde (0)_
+
