--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -337,5 +337,5 @@ _A veces la calidad de producto están condicionada a la calidad del proceso_
 _Grupos: 5 primeros: afectan al usuario(facilidad de uso=ergonomía).3 siguientes: punto de vista de los programadores, el usuario final no verá lo bien o mal escrito que esté.Flexibilidad facilidad de modificación de código. 3 últimos: afectan a quien instala o implanta la aplicación. Portabilidad: cambiar por ejemplo de linux a windows.Interoperi: como se relaciona ese software con otro software_
 
 _Compilación cruzada: se puede desarrollar en Ubuntu para Winsows por ejemplo_
-_Código en Githug, push se lanzan las tareas... Baget verde (0)_
-
+_Código en GitHug, push se lanzan las tareas... Baget verde (0)_
+_Resumen: tipos de test, caja negra, caja blanca (examen de teoría y práctica (prueba cobertura, edición de código, comandos gradle, etc)), funcionales, no funcionales (regresión y humo son un poquito más raros). Practico: frameware JUnit, notación:@Test,import org.JUnit.], Assert también importante, distintos métodos: assertequals, assertarrayequals, asserarraynotequals, assertnull, assernotnull, assertrue, arrtefalse, fail_
