--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -96,8 +96,8 @@ _CAE. Forma en la que se aborda la prueba. Caja blanca también se llama caja tr
   - Valores límite
 
 _Se trabaja sobre la interfaz (no gráfica, la interfaz de programación) el cascarón, la parte externa. Se ponen unos valores de entrada y se ve si los valores de salida son los correctos. Si quisieramos analizar una aplicaicón que lo que hace es multiplicar dos números: 
-[Particiones de equivalencia]: ciertos tipos de datos, para un método para comprobar una división: coger el números y dividir en partes: probar multiplicar varias parejas de números positivos, y varias parejas de números negativos, y varias de 1 número positivo y otro negativo, Se agrupan en particiones para hacer las pruebas.
-[Valores límites]: se emplea con números muy raros que están en los límites mínimos y máximos (cero, máx número positivo (en byte probar 126,127,128))_
+_[Particiones de equivalencia]: ciertos tipos de datos, para un método para comprobar una división: coger el números y dividir en partes: probar multiplicar varias parejas de números positivos, y varias parejas de números negativos, y varias de 1 número positivo y otro negativo, Se agrupan en particiones para hacer las pruebas.
+_[Valores límites]: se emplea con números muy raros que están en los límites mínimos y máximos (cero, máx número positivo (en byte probar 126,127,128)). Ejemplo: mayoría de edad, 18, uno por debajo y otro por encima_
 
 ### Estrategias de prueba de caja blanca
 
