--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -107,10 +107,12 @@ _[Valores límites]: se emplea con números muy raros que están en los límites
 - También pueden comprobarse los flujos entre unidades durante la integración.
 - E incluso entre subsistemas, durante las pruebas de sistema.
 - Principales técnicas:
-  - Cobertura lógica
+  - Cobertura de código
   - Prueba de bucles
 
 _Técnicas: cobertura de código, comprueba que por ejemplo no se ha dejado ningún if sin pasar, que no deja ningún grupo sin probar. Prueba de bucles (bucles infinitos, que no se ejecutan)... Ver cómo funciona por dentro_
+_Cobertura: jacoco, verde cód. probado, rojo cód. no probado_
+_Pruebas de bucles:no los damos_
 
 ### Tipos de pruebas
 
@@ -132,10 +134,11 @@ Evaluan aspectos adicionales como rendimiento, seguridad, ...
 - Pruebas alfa y beta
 - Pruebas de aceptación (validación por parte del cliente)
 
-_Pruebas de regresión: efectos colaterales de solucionar un error (son errores de regresión) que aparece otro error que antes no existía. Se hacen las pruebas que ya pasaron antes para que lo que funcionaba entes, siga funcionando(unitarias anteriores)_
-_Prueba de integración, se prueba la clase main, que es donde se integran las distintas clases._
+_Pruebas unitarias: en Java una unidad es una clase_
+_Pruebas de regresión: efectos colaterales de solucionar un error (son errores de regresión) que aparece otro error que antes no existía. Se hacen las pruebas que ya pasaron antes para que lo que funcionaba antes, siga funcionando(unitarias anteriores)_
+_Prueba de integración: se prueba la clase main, que es donde se integran las distintas clases._
 _Pruebas de sistema: Pruebas de rendimientos, de eficiencia (recursos)
-_Pruebas de humo: comprobar el entorno: para una determinada aplicación necesitamos requisitos críticos ( son cosas externas a la aplicación), para que cuando traslademos la aplicación al cliente. Aunque la aplicaicón esté bien, si cuando llegas a enseñarsela al cliente si el equipo no tiene el SO necesario, la variable path.... no funcionará_
+_Pruebas de humo: comprobar el entorno: para una determinada aplicación necesitamos requisitos críticos (son cosas externas a la aplicación), para que cuando traslademos la aplicación al cliente. Aunque la aplicaicón esté bien, si cuando llegas a enseñarsela al cliente si el equipo no tiene el SO necesario, la variable path.... no funcionará_
 _Pruebas alfa: se hacen en la empresa desarrolladora. Pruebas beta: software aun no es definitivo, las prueba el cliente normalmente (RC: versión justo anterior a la liberación)_
 _Pruebas de aceptación: normalmente no hay problemas a estás alturas. Validación por parte del cliente_
 
@@ -216,6 +219,7 @@ _Valor(es) de entrada que ser asocia a una valor(es) de salida_
 - @Ignore
 
 _Etiquetas importantes JUnit4: Método de prueba:@test. @Ignore. @BeforeClass antes de todas las clases. @Before antes de cada test. En teoría solo un método @before y otro @after como máximo. @Test habrá muchos
+izquierda junit4, derecha junit5
 
 importar: unit.*_
 
