--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -2,6 +2,7 @@
 
 - [Diapositivas](http://jamj2000.github.io/entornosdesarrollo/3/diapositivas)
 - [Actividades](http://jamj2000.github.io/entornosdesarrollo/3/actividades)
+
 _Disco duro de roer_
 
 <!---
@@ -30,8 +31,6 @@ En esta Unidad aprenderemos a:
 - Efectuar pruebas de integración, de sistema y de aceptación.
 - Realizar medidas de calidad sobre el software desarrollado.
 
-_índice: introducción, pruebas, Pruebas unitarias: pruebas de la unidad(ej:clase empleado) de clase o método. Pruebas de integración: varias clases que por si solas funcionan bien,y al integrar todas hay errores. Pruebas de sistema: una vez implantado en el S.O. rendimiento, tolerancia a fallos... Prueba de aceptación: el cliente debe dar el visto bueno. Medidas de calidad: que cumpla los requisitos del cliente, que sea eficiente, interfaz amigable, facilidad de uso y facilidad de mantenimiento (diseño ordenado, que falicite los cambios que haya que hacer...), tolerancia a fallos, multiplataforma_
-_pwa aplicaciones progresivas_
 
 ### Objetivos de las pruebas
 
@@ -134,14 +133,18 @@ Evaluan aspectos adicionales como rendimiento, seguridad, ...
 - Pruebas alfa y beta
 - Pruebas de aceptación (validación por parte del cliente)
 
-_Pruebas unitarias: en Java una unidad es una clase_
-_Pruebas de regresión: efectos colaterales de solucionar un error (son errores de regresión) que aparece otro error que antes no existía. Se hacen las pruebas que ya pasaron antes para que lo que funcionaba antes, siga funcionando(unitarias anteriores)_
-_Prueba de integración: se prueba la clase main, que es donde se integran las distintas clases._
+_Pruebas unitarias: en Java una unidad es una clase._
+
+_Pruebas de regresión: efectos colaterales de hacer cambios en un programa (solucionar un error) que hace aparece otro error (errores de regresión) que antes no existía. Se hacen las pruebas que ya pasaron antes para que lo que funcionaba antes, siga funcionando (unitarias anteriores)._
+
+_Prueba de integración: se prueba que todos los elementos unitarios que componen el software funcionan juntos correctamente, probándolos en grupo: se prueba la clase main, que es donde se integran las distintas clases._
+
 _Pruebas de sistema: Pruebas de rendimientos, de eficiencia (recursos)
 _Pruebas de humo: comprobar el entorno: para una determinada aplicación necesitamos requisitos críticos (son cosas externas a la aplicación), para que cuando traslademos la aplicación al cliente. Aunque la aplicaicón esté bien, si cuando llegas a enseñarsela al cliente si el equipo no tiene el SO necesario, la variable path.... no funcionará_
 _Pruebas alfa: se hacen en la empresa desarrolladora. Pruebas beta: software aun no es definitivo, las prueba el cliente normalmente (RC: versión justo anterior a la liberación)_
 _Pruebas de aceptación: normalmente no hay problemas a estás alturas. Validación por parte del cliente_
-
+_Índice: introducción, pruebas, Pruebas unitarias: pruebas de la unidad(ej:clase empleado) de clase o método. Pruebas de integración: varias clases que por si solas funcionan bien,y al integrar todas hay errores. Pruebas de sistema: una vez implantado en el S.O. rendimiento, tolerancia a fallos... Prueba de aceptación: el cliente debe dar el visto bueno. Medidas de calidad: que cumpla los requisitos del cliente, que sea eficiente, interfaz amigable, facilidad de uso y facilidad de mantenimiento (diseño ordenado, que falicite los cambios que haya que hacer...), tolerancia a fallos, multiplataforma_
+_pwa aplicaciones progresivas_
 
 ### Pruebas no funcionales
 
