--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -97,7 +97,7 @@ _CAE. Forma en la que se aborda la prueba. Caja blanca también se llama caja tr
 _Se trabaja sobre la interfaz (no gráfica, la interfaz de programación) el cascarón, la parte externa. Se ponen unos valores de entrada y se ve si los valores de salida son los correctos. Si quisieramos analizar una aplicaicón que lo que hace es multiplicar dos números:_
 _Caso reprensentativos:_
 _[Particiones de equivalencia]: ciertos tipos de datos, para un método para comprobar una división: coger el números y dividir en partes: probar multiplicar varias parejas de números positivos, y varias parejas de números negativos, y varias de 1 número positivo y otro negativo, Se agrupan en particiones para hacer las pruebas._
-_[Valores límites]: se emplea con números muy raros que están en los límites mínimos y máximos (cero, máx número positivo (en byte probar 126,127,128)). Ejemplo: mayoría de edad, 18, uno por debajo y otro por encima_
+_[Valores límites]: se emplea con números muy raros que están en los límites mínimos y máximos (cero, máx número positivo (en byte probar 126,127,128)). Ejemplo: mayoría de edad, 18, uno por debajo y otro por encima._
 
 ### Estrategias de prueba de caja blanca
 
@@ -109,9 +109,9 @@ _[Valores límites]: se emplea con números muy raros que están en los límites
   - Cobertura de código
   - Prueba de bucles
 
-_Técnicas: cobertura de código, comprueba que por ejemplo no se ha dejado ningún if sin pasar, que no deja ningún grupo sin probar. Prueba de bucles (bucles infinitos, que no se ejecutan)... Ver cómo funciona por dentro_
-_Cobertura: jacoco, verde cód. probado, rojo cód. no probado_
-_Pruebas de bucles:no los damos_
+_Técnicas: cobertura de código, comprueba que por ejemplo no se ha dejado ningún if sin pasar, que no deja ningún grupo sin probar. Prueba de bucles (bucles infinitos, que no se ejecutan)... Ver cómo funciona por dentro._
+_Cobertura: jacoco, verde cód. probado, rojo cód. no probado._
+_Pruebas de bucles:no los damos._
 
 ### Tipos de pruebas
 
@@ -133,18 +133,24 @@ Evaluan aspectos adicionales como rendimiento, seguridad, ...
 - Pruebas alfa y beta
 - Pruebas de aceptación (validación por parte del cliente)
 
-_Pruebas unitarias: en Java una unidad es una clase._
+_Pruebas unitarias: en Java una unidad es una clase. La unidad(ej:clase empleado) de clase o método._
 
 _Pruebas de regresión: efectos colaterales de hacer cambios en un programa (solucionar un error) que hace aparece otro error (errores de regresión) que antes no existía. Se hacen las pruebas que ya pasaron antes para que lo que funcionaba antes, siga funcionando (unitarias anteriores)._
 
-_Prueba de integración: se prueba que todos los elementos unitarios que componen el software funcionan juntos correctamente, probándolos en grupo: se prueba la clase main, que es donde se integran las distintas clases._
+_Prueba de integración: se prueba que todos los elementos unitarios que componen el software funcionan juntos correctamente, probándolos en grupo: se prueba la clase main, que es donde se integran las distintas clases. Varias clases que por si solas funcionan bien,y al integrar todas hay errores._
 
-_Pruebas de sistema: Pruebas de rendimientos, de eficiencia (recursos)
-_Pruebas de humo: comprobar el entorno: para una determinada aplicación necesitamos requisitos críticos (son cosas externas a la aplicación), para que cuando traslademos la aplicación al cliente. Aunque la aplicaicón esté bien, si cuando llegas a enseñarsela al cliente si el equipo no tiene el SO necesario, la variable path.... no funcionará_
-_Pruebas alfa: se hacen en la empresa desarrolladora. Pruebas beta: software aun no es definitivo, las prueba el cliente normalmente (RC: versión justo anterior a la liberación)_
-_Pruebas de aceptación: normalmente no hay problemas a estás alturas. Validación por parte del cliente_
-_Índice: introducción, pruebas, Pruebas unitarias: pruebas de la unidad(ej:clase empleado) de clase o método. Pruebas de integración: varias clases que por si solas funcionan bien,y al integrar todas hay errores. Pruebas de sistema: una vez implantado en el S.O. rendimiento, tolerancia a fallos... Prueba de aceptación: el cliente debe dar el visto bueno. Medidas de calidad: que cumpla los requisitos del cliente, que sea eficiente, interfaz amigable, facilidad de uso y facilidad de mantenimiento (diseño ordenado, que falicite los cambios que haya que hacer...), tolerancia a fallos, multiplataforma_
-_pwa aplicaciones progresivas_
+_Pruebas de sistema: una vez implantado en el S.O. se hacen pruebas de rendimientos, de eficiencia (recursos), tolerancia a fallos..._
+
+_Pruebas de humo: comprobar el entorno: para una determinada aplicación necesitamos requisitos críticos (son cosas externas a la aplicación), para que cuando traslademos la aplicación al cliente. Aunque la aplicación esté bien, si cuando llegas a enseñarsela al cliente si el equipo no tiene el SO necesario, la variable path.... no funcionará._
+
+_Pruebas alfa: se hacen en la empresa desarrolladora._
+
+_Pruebas beta: software aun no es definitivo, las prueba el cliente normalmente (RC: versión justo anterior a la liberación)._
+
+_Pruebas de aceptación: Validación por parte del cliente (el cliente debe dar el visto bueno). normalmente no hay problemas a estás alturas._
+
+_Medidas de calidad: que cumpla los requisitos del cliente, que sea eficiente, interfaz amigable, facilidad de uso y facilidad de mantenimiento (diseño ordenado, que falicite los cambios que haya que hacer...), tolerancia a fallos, multiplataforma._
+
 
 ### Pruebas no funcionales
 
