--- a/4.DOCUMENTACION.md
+++ b/4.DOCUMENTACION.md
@@ -125,6 +125,7 @@ Note: A fecha Diciembre 2017
 
 
 ## Control de versiones
+_Creamos un programa que funciona (código fuente que nombramos con 1.0 o como queramos, y lo guardamos en una servidor (se van guardando todas las copias). El control de versiones es una manera de hacer copias de seguridad: se guarda el código completo del sódigo fuente 1.0 y luego se van guardando los cambios (no completo el código, que ocuparía demasiado tener todas las versiones completas guardadas.)Lo vamos a ver desde comandos no interfaz gráfica)_
 
 
 ### Sistemas más conocidos:
@@ -142,7 +143,7 @@ Note: A fecha Diciembre 2017
 - Moderno
 - Distribuido
 - Eficiente
-
+_Git: Es el sistema de control de versiones propiamente dicho. No confunciar con GitHug: sitio web, servidor o conjunto de servisores, que trabaja con Git. Permite que subas el código y hacer control de versiones y demás de forma amigable a través de la web._
 
 ### Git (Conceptos)
 
@@ -151,6 +152,7 @@ Note: A fecha Diciembre 2017
 - Branch
   - Checkout
   - Merge (fast-forward, 3-way)
+_Commit->Registro. Dos copias siempre, la remota y la local. A veces trabajan varias personas con el mismo código, se harían copias en local del código, y habría que tener en cuenta que hay que actualizar el remoto(posibles problemas)_
 
 
 ### Git (Áreas)
