--- a/4.DOCUMENTACION.md
+++ b/4.DOCUMENTACION.md
@@ -33,6 +33,8 @@ En esta Unidad aprenderemos a:
 - Tipos:
   - __Análisis dinámico__ (unit tests)
   - __Análisis estático__ (__lint__)
+  
+  _Test unitarios, y optimización_
 
 
 ### Análisis estático de código
@@ -81,6 +83,7 @@ Note: A fecha Diciembre 2017
 - Precio/Mes:
   - Plan Open Source: 0 $
   - Plan Private Projects: Desde 5 $ 
+  _Java y muchos otros_
 
 Note: A fecha Diciembre 2017
 
