--- a/4.DOCUMENTACION.md
+++ b/4.DOCUMENTACION.md
@@ -99,6 +99,8 @@ Note: A fecha Diciembre 2017
   - Eliminación de código redundante 
   - Eliminación de código muerto
   - ...
+  
+  _Inalcanzable: despues de un return, en un buble que no se entra, en una condición que siempre será falsa, el código del true es inalcanzable. Mirar el artículo de Wikipedia._ 
 
 [Artículo en Wikipedia](https://es.wikipedia.org/wiki/Eliminaci%C3%B3n_de_c%C3%B3digo_muerto)
 
@@ -110,6 +112,8 @@ Note: A fecha Diciembre 2017
 ### Insignias (badges)
 
 [ ![badges](http://jamj2000.github.io/entornosdesarrollo/4/assets/badges.png) ](https://shields.io/)
+_Ofrece información de un proyecto. Hay muchísimas. Hay una web en la que se pueden crear insignias, por ejemplo de la versión de Java que se está utilizando._
+
 
 
 ### Tipos de documentación
@@ -117,6 +121,7 @@ Note: A fecha Diciembre 2017
 - Documentación de código
 - Documentación técnica
 - Documentación de usuario
+_1: comentarios, 2: para programadores, 3: pdf o libro electrónico (GitBook) para el usuario, no del todo técnica_
 
 
 ### Formatos de documentación
@@ -125,6 +130,7 @@ Note: A fecha Diciembre 2017
 - **Markdown** (p. ej. Gitbook)
 - **reStructuredText** (p. ej. Readthedocs)
 - **asciiDoc** 
+_2: el más interesante. 3: es más potente que el 2(que está un poquito más limitado) rct, permite 2 índices y un montón de cosas_
 
 
 
