--- a/4.DOCUMENTACION.md
+++ b/4.DOCUMENTACION.md
@@ -218,3 +218,6 @@ _Commit->Registro. Dos copias siempre, la remota y la local. A veces trabajan va
 - __[Coding -en chino-](https://coding.net/)__
 
 ![Git sites](http://jamj2000.github.io/entornosdesarrollo/4/assets/git-sites.png)
+
+
+_Markdown(md) y rst(restructuret text: otro lenguaje parecido a markdown pero con otras notaciones, si está en este lenguaje se puede usar readthedocs.com para crear epub, etc... crea proyecto: da un dominio, )_
