--- a/4.DOCUMENTACION.md
+++ b/4.DOCUMENTACION.md
@@ -136,7 +136,7 @@ _1: comentarios, 2: para programadores, 3: pdf o libro electrónico (GitBook) pa
 - **reStructuredText** (p. ej. Readthedocs)
 - **asciiDoc** 
 
-_2: el más interesante. 3: es más potente que el 2(que está un poquito más limitado) rct, permite 2 índices y un montón de cosas_
+_2: el más interesante. 3: es más potente que el 2(que está un poquito más limitado) rst, permite 2 índices y un montón de cosas_
 
 
 
