--- a/4.DOCUMENTACION.md
+++ b/4.DOCUMENTACION.md
@@ -160,7 +160,7 @@ _Creamos un programa que funciona (código fuente que nombramos con 1.0 o como q
 - Distribuido
 - Eficiente
 
-_Git: Es el sistema de control de versiones propiamente dicho. No confunciar con GitHug: sitio web, servidor o conjunto de servisores, que trabaja con Git. Permite que subas el código y hacer control de versiones y demás de forma amigable a través de la web._
+_Git: Es el sistema de control de versiones propiamente dicho. No confundir con GitHug: sitio web, servidor o conjunto de servisores, que trabaja con Git. Permite que subas el código y hacer control de versiones y demás de forma amigable a través de la web.Githug tiene también una aplicaión de escritorio_
 
 ### Git (Conceptos)
 
