--- a/4.DOCUMENTACION.md
+++ b/4.DOCUMENTACION.md
@@ -221,3 +221,7 @@ _Commit->Registro. Dos copias siempre, la remota y la local. A veces trabajan va
 
 
 _Markdown(md) y rst(restructuret text: otro lenguaje parecido a markdown pero con otras notaciones, si está en este lenguaje se puede usar readthedocs.com para crear epub, etc... crea proyecto: da un dominio, )_
+
+_El otro día quería copiar de remoto el .git, el gitignore y licence: copiarlo al código fuente en local.Habrá una vinculación entre el repositorio local y el remoto, Cuando bajo el .git, bajo todos los commit y la vinculación entre los repositorios:
+
+hacer un repositorio remoto, si ya hay algún commit, hay q bajar los archivos, y hacer un git status, hay que añadir con git add y volverlo a subir
