--- a/4.DOCUMENTACION.md
+++ b/4.DOCUMENTACION.md
@@ -150,6 +150,8 @@ _Creamos un programa que funciona (código fuente que nombramos con 1.0 o como q
   - Subversion
   - Mercurial
   - **Git**
+  
+_CVS: de los primeros que salieron. Subversion: necesita que estés conectado al servidor, menos distribuido que Git. Git: el que más se está usando, distribuido, se puede trabajar de forma offline._
 
 
 ### Git
@@ -170,12 +172,14 @@ _Git: Es el sistema de control de versiones propiamente dicho. No confundir con 
   - Checkout
   - Merge (fast-forward, 3-way)
   
-_Commit->Registro. Dos copias siempre, la remota y la local. A veces trabajan varias personas con el mismo código, se harían copias en local del código, y habría que tener en cuenta que hay que actualizar el remoto(posibles problemas)_
+_Commit->Registro. Cada commit es un cambio (antes de commit, git add). Dos copias siempre, la remota y la local. A veces trabajan varias personas con el mismo código, se harían copias en local del código, y habría que tener en cuenta que hay que actualizar el remoto(posibles problemas). Checkout nos permite movernos entre distintos commit y distintas ramas (en Subvercion checkout =clone). En git nos sirve para movernos entre distintos commit y distintas ramas. Merge: para fusionar distintas ramas. Hay distintos tipos: fast-forward y 3-way_
 
 
 ### Git (Áreas)
 
 ![Git areas](http://jamj2000.github.io/entornosdesarrollo/4/assets/git-areas1.png)
+
+
 
 
 ### Git (Áreas)
@@ -206,6 +210,10 @@ _Commit->Registro. Dos copias siempre, la remota y la local. A veces trabajan va
 # Otros
   diff, tag, submodule
 ```
+
+_config:
+init:inicializar un repositorio en local, status: para ver los cambios que hemos hecho, log: para ver todos los commit..._
+
 
 [CheatSheet](https://services.github.com/on-demand/downloads/github-git-cheat-sheet.pdf)
 
